semantic/Parser.output
   0  $accept : %entry% $end

   1  program : stmt_list T_EOF

   2  stmt_list :
   3            | stmt_list letdef
   4            | stmt_list typedef

   5  letdef : T_LET def anddef
   6         | T_LET T_REC def anddef

   7  anddef :
   8         | anddef T_ANDDEF def

   9  def : T_ID parstar T_SEQ expr
  10      | T_ID parstar T_COLON types T_SEQ expr
  11      | T_MUTABLE T_ID
  12      | T_MUTABLE T_ID T_COLON types
  13      | T_MUTABLE T_ID T_LBRACK expr comaexpr T_RBRACK
  14      | T_MUTABLE T_ID T_LBRACK expr comaexpr T_RBRACK T_COLON types

  15  parstar :
  16          | parstar T_ID
  17          | parstar T_LPAR T_ID T_COLON types T_RPAR

  18  typedef : T_TYPE T_ID T_SEQ T_CID constrbar andtdefstar
  19          | T_TYPE T_ID T_SEQ T_CID T_OF typeplus constrbar andtdefstar

  20  andtdefstar :
  21              | andtdefstar T_ANDDEF T_ID T_SEQ T_CID constrbar
  22              | andtdefstar T_ANDDEF T_ID T_SEQ T_CID T_OF typeplus constrbar

  23  constrbar :
  24            | constrbar T_BAR T_CID
  25            | constrbar T_BAR T_CID T_OF typeplus

  26  typeplus : types
  27           | typeplus types

  28  types : T_UNIT
  29        | T_INTST
  30        | T_CHAR
  31        | T_BOOL
  32        | T_FLOATST
  33        | T_LPAR types T_RPAR
  34        | types T_GIVES types
  35        | types T_REF
  36        | T_ARRAY T_OF types
  37        | T_ARRAY T_LBRACK T_TIMES comastar T_RBRACK T_OF types
  38        | T_ID

  39  comastar :
  40           | comastar T_COMA T_TIMES

  41  expr : expr T_FPLUS expr
  42       | expr T_PLUS expr
  43       | expr T_MINUS expr
  44       | expr T_FMINUS expr
  45       | expr T_TIMES expr
  46       | expr T_FTIMES expr
  47       | expr T_DIV expr
  48       | expr T_FDIV expr
  49       | expr T_MOD expr
  50       | expr T_POWER expr
  51       | expr T_SEQ expr
  52       | expr T_NSEQ expr
  53       | expr T_L expr
  54       | expr T_G expr
  55       | expr T_LE expr
  56       | expr T_GE expr
  57       | expr T_EQ expr
  58       | expr T_NEQ expr
  59       | expr T_AND expr
  60       | expr T_OR expr
  61       | expr T_SMCOLON expr
  62       | expr T_ASSIGN expr
  63       | T_PLUS expr
  64       | T_FPLUS expr
  65       | T_FMINUS expr
  66       | T_MINUS expr
  67       | T_NOT expr
  68       | T_DELETE expr
  69       | T_BEGIN expr T_END
  70       | T_WHILE expr T_DO expr T_DONE
  71       | T_FOR T_ID T_SEQ expr count expr T_DO expr T_DONE
  72       | T_DIM intmb T_ID
  73       | T_NEW types
  74       | T_IF expr T_THEN expr T_ELSE expr
  75       | T_IF expr T_THEN expr
  76       | letdef T_IN expr
  77       | T_MATCH expr T_WITH clause clausestar T_END
  78       | T_CID atomstar
  79       | T_ID atomstar
  80       | atom

  81  atom : T_INT
  82       | T_FLOAT
  83       | T_CONSTCHAR
  84       | T_STRING
  85       | T_TRUE
  86       | T_FALSE
  87       | T_LPAR T_RPAR
  88       | T_CID
  89       | T_ID
  90       | T_BANK atom
  91       | T_ID T_LBRACK expr comaexpr T_RBRACK
  92       | T_LPAR expr T_RPAR

  93  comaexpr :
  94           | T_COMA expr comaexpr

  95  atomstar : atom
  96           | atom atomstar

  97  count : T_TO
  98        | T_DOWNTO

  99  intmb :
 100        | T_INT

 101  clausestar :
 102             | clausestar T_BAR clause

 103  clause : pattern T_GIVES expr

 104  pattern : pattom
 105          | T_CID pattomstar

 106  pattom : T_PLUS T_INT
 107         | T_MINUS T_INT
 108         | T_FPLUS T_FLOAT
 109         | T_FMINUS T_FLOAT
 110         | T_INT
 111         | T_FLOAT
 112         | T_CONSTCHAR
 113         | T_TRUE
 114         | T_FALSE
 115         | T_ID
 116         | T_CID
 117         | T_LPAR pattern T_RPAR

 118  pattomstar : pattom
 119             | pattomstar pattom

 120  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (120)
	stmt_list : .  (2)

	.  reduce 2

	program  goto 3
	stmt_list  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (120)

	.  reduce 120


state 4
	program : stmt_list . T_EOF  (1)
	stmt_list : stmt_list . letdef  (3)
	stmt_list : stmt_list . typedef  (4)

	T_EOF  shift 5
	T_LET  shift 6
	T_TYPE  shift 7
	.  error

	letdef  goto 8
	typedef  goto 9


state 5
	program : stmt_list T_EOF .  (1)

	.  reduce 1


state 6
	letdef : T_LET . def anddef  (5)
	letdef : T_LET . T_REC def anddef  (6)

	T_MUTABLE  shift 10
	T_REC  shift 11
	T_ID  shift 12
	.  error

	def  goto 13


state 7
	typedef : T_TYPE . T_ID T_SEQ T_CID constrbar andtdefstar  (18)
	typedef : T_TYPE . T_ID T_SEQ T_CID T_OF typeplus constrbar andtdefstar  (19)

	T_ID  shift 14
	.  error


state 8
	stmt_list : stmt_list letdef .  (3)

	.  reduce 3


state 9
	stmt_list : stmt_list typedef .  (4)

	.  reduce 4


state 10
	def : T_MUTABLE . T_ID  (11)
	def : T_MUTABLE . T_ID T_COLON types  (12)
	def : T_MUTABLE . T_ID T_LBRACK expr comaexpr T_RBRACK  (13)
	def : T_MUTABLE . T_ID T_LBRACK expr comaexpr T_RBRACK T_COLON types  (14)

	T_ID  shift 15
	.  error


state 11
	letdef : T_LET T_REC . def anddef  (6)

	T_MUTABLE  shift 10
	T_ID  shift 12
	.  error

	def  goto 16


state 12
	def : T_ID . parstar T_SEQ expr  (9)
	def : T_ID . parstar T_COLON types T_SEQ expr  (10)
	parstar : .  (15)

	.  reduce 15

	parstar  goto 17


state 13
	letdef : T_LET def . anddef  (5)
	anddef : .  (7)

	.  reduce 7

	anddef  goto 18


state 14
	typedef : T_TYPE T_ID . T_SEQ T_CID constrbar andtdefstar  (18)
	typedef : T_TYPE T_ID . T_SEQ T_CID T_OF typeplus constrbar andtdefstar  (19)

	T_SEQ  shift 19
	.  error


state 15
	def : T_MUTABLE T_ID .  (11)
	def : T_MUTABLE T_ID . T_COLON types  (12)
	def : T_MUTABLE T_ID . T_LBRACK expr comaexpr T_RBRACK  (13)
	def : T_MUTABLE T_ID . T_LBRACK expr comaexpr T_RBRACK T_COLON types  (14)

	T_LBRACK  shift 20
	T_COLON  shift 21
	T_EOF  reduce 11
	T_ANDDEF  reduce 11
	T_IN  reduce 11
	T_LET  reduce 11
	T_TYPE  reduce 11


state 16
	letdef : T_LET T_REC def . anddef  (6)
	anddef : .  (7)

	.  reduce 7

	anddef  goto 22


state 17
	def : T_ID parstar . T_SEQ expr  (9)
	def : T_ID parstar . T_COLON types T_SEQ expr  (10)
	parstar : parstar . T_ID  (16)
	parstar : parstar . T_LPAR T_ID T_COLON types T_RPAR  (17)

	T_ID  shift 23
	T_SEQ  shift 24
	T_LPAR  shift 25
	T_COLON  shift 26
	.  error


state 18
	letdef : T_LET def anddef .  (5)
	anddef : anddef . T_ANDDEF def  (8)

	T_ANDDEF  shift 27
	T_EOF  reduce 5
	T_IN  reduce 5
	T_LET  reduce 5
	T_TYPE  reduce 5


state 19
	typedef : T_TYPE T_ID T_SEQ . T_CID constrbar andtdefstar  (18)
	typedef : T_TYPE T_ID T_SEQ . T_CID T_OF typeplus constrbar andtdefstar  (19)

	T_CID  shift 28
	.  error


state 20
	def : T_MUTABLE T_ID T_LBRACK . expr comaexpr T_RBRACK  (13)
	def : T_MUTABLE T_ID T_LBRACK . expr comaexpr T_RBRACK T_COLON types  (14)

	T_BEGIN  shift 29
	T_DELETE  shift 30
	T_DIM  shift 31
	T_FOR  shift 32
	T_IF  shift 33
	T_LET  shift 6
	T_MATCH  shift 34
	T_NEW  shift 35
	T_NOT  shift 36
	T_WHILE  shift 37
	T_ID  shift 38
	T_CID  shift 39
	T_FLOAT  shift 40
	T_INT  shift 41
	T_CONSTCHAR  shift 42
	T_STRING  shift 43
	T_FALSE  shift 44
	T_TRUE  shift 45
	T_PLUS  shift 46
	T_MINUS  shift 47
	T_FPLUS  shift 48
	T_FMINUS  shift 49
	T_BANK  shift 50
	T_LPAR  shift 51
	.  error

	letdef  goto 52
	expr  goto 53
	atom  goto 54


state 21
	def : T_MUTABLE T_ID T_COLON . types  (12)

	T_ARRAY  shift 55
	T_ID  shift 56
	T_CHAR  shift 57
	T_BOOL  shift 58
	T_UNIT  shift 59
	T_FLOATST  shift 60
	T_INTST  shift 61
	T_LPAR  shift 62
	.  error

	types  goto 63


state 22
	letdef : T_LET T_REC def anddef .  (6)
	anddef : anddef . T_ANDDEF def  (8)

	T_ANDDEF  shift 27
	T_EOF  reduce 6
	T_IN  reduce 6
	T_LET  reduce 6
	T_TYPE  reduce 6


state 23
	parstar : parstar T_ID .  (16)

	.  reduce 16


state 24
	def : T_ID parstar T_SEQ . expr  (9)

	T_BEGIN  shift 29
	T_DELETE  shift 30
	T_DIM  shift 31
	T_FOR  shift 32
	T_IF  shift 33
	T_LET  shift 6
	T_MATCH  shift 34
	T_NEW  shift 35
	T_NOT  shift 36
	T_WHILE  shift 37
	T_ID  shift 38
	T_CID  shift 39
	T_FLOAT  shift 40
	T_INT  shift 41
	T_CONSTCHAR  shift 42
	T_STRING  shift 43
	T_FALSE  shift 44
	T_TRUE  shift 45
	T_PLUS  shift 46
	T_MINUS  shift 47
	T_FPLUS  shift 48
	T_FMINUS  shift 49
	T_BANK  shift 50
	T_LPAR  shift 51
	.  error

	letdef  goto 52
	expr  goto 64
	atom  goto 54


state 25
	parstar : parstar T_LPAR . T_ID T_COLON types T_RPAR  (17)

	T_ID  shift 65
	.  error


state 26
	def : T_ID parstar T_COLON . types T_SEQ expr  (10)

	T_ARRAY  shift 55
	T_ID  shift 56
	T_CHAR  shift 57
	T_BOOL  shift 58
	T_UNIT  shift 59
	T_FLOATST  shift 60
	T_INTST  shift 61
	T_LPAR  shift 62
	.  error

	types  goto 66


state 27
	anddef : anddef T_ANDDEF . def  (8)

	T_MUTABLE  shift 10
	T_ID  shift 12
	.  error

	def  goto 67


state 28
	typedef : T_TYPE T_ID T_SEQ T_CID . constrbar andtdefstar  (18)
	typedef : T_TYPE T_ID T_SEQ T_CID . T_OF typeplus constrbar andtdefstar  (19)
	constrbar : .  (23)

	T_OF  shift 68
	T_EOF  reduce 23
	T_ANDDEF  reduce 23
	T_LET  reduce 23
	T_TYPE  reduce 23
	T_BAR  reduce 23

	constrbar  goto 69


state 29
	expr : T_BEGIN . expr T_END  (69)

	T_BEGIN  shift 29
	T_DELETE  shift 30
	T_DIM  shift 31
	T_FOR  shift 32
	T_IF  shift 33
	T_LET  shift 6
	T_MATCH  shift 34
	T_NEW  shift 35
	T_NOT  shift 36
	T_WHILE  shift 37
	T_ID  shift 38
	T_CID  shift 39
	T_FLOAT  shift 40
	T_INT  shift 41
	T_CONSTCHAR  shift 42
	T_STRING  shift 43
	T_FALSE  shift 44
	T_TRUE  shift 45
	T_PLUS  shift 46
	T_MINUS  shift 47
	T_FPLUS  shift 48
	T_FMINUS  shift 49
	T_BANK  shift 50
	T_LPAR  shift 51
	.  error

	letdef  goto 52
	expr  goto 70
	atom  goto 54


state 30
	expr : T_DELETE . expr  (68)

	T_BEGIN  shift 29
	T_DELETE  shift 30
	T_DIM  shift 31
	T_FOR  shift 32
	T_IF  shift 33
	T_LET  shift 6
	T_MATCH  shift 34
	T_NEW  shift 35
	T_NOT  shift 36
	T_WHILE  shift 37
	T_ID  shift 38
	T_CID  shift 39
	T_FLOAT  shift 40
	T_INT  shift 41
	T_CONSTCHAR  shift 42
	T_STRING  shift 43
	T_FALSE  shift 44
	T_TRUE  shift 45
	T_PLUS  shift 46
	T_MINUS  shift 47
	T_FPLUS  shift 48
	T_FMINUS  shift 49
	T_BANK  shift 50
	T_LPAR  shift 51
	.  error

	letdef  goto 52
	expr  goto 71
	atom  goto 54


state 31
	expr : T_DIM . intmb T_ID  (72)
	intmb : .  (99)

	T_INT  shift 72
	T_ID  reduce 99

	intmb  goto 73


state 32
	expr : T_FOR . T_ID T_SEQ expr count expr T_DO expr T_DONE  (71)

	T_ID  shift 74
	.  error


state 33
	expr : T_IF . expr T_THEN expr T_ELSE expr  (74)
	expr : T_IF . expr T_THEN expr  (75)

	T_BEGIN  shift 29
	T_DELETE  shift 30
	T_DIM  shift 31
	T_FOR  shift 32
	T_IF  shift 33
	T_LET  shift 6
	T_MATCH  shift 34
	T_NEW  shift 35
	T_NOT  shift 36
	T_WHILE  shift 37
	T_ID  shift 38
	T_CID  shift 39
	T_FLOAT  shift 40
	T_INT  shift 41
	T_CONSTCHAR  shift 42
	T_STRING  shift 43
	T_FALSE  shift 44
	T_TRUE  shift 45
	T_PLUS  shift 46
	T_MINUS  shift 47
	T_FPLUS  shift 48
	T_FMINUS  shift 49
	T_BANK  shift 50
	T_LPAR  shift 51
	.  error

	letdef  goto 52
	expr  goto 75
	atom  goto 54


state 34
	expr : T_MATCH . expr T_WITH clause clausestar T_END  (77)

	T_BEGIN  shift 29
	T_DELETE  shift 30
	T_DIM  shift 31
	T_FOR  shift 32
	T_IF  shift 33
	T_LET  shift 6
	T_MATCH  shift 34
	T_NEW  shift 35
	T_NOT  shift 36
	T_WHILE  shift 37
	T_ID  shift 38
	T_CID  shift 39
	T_FLOAT  shift 40
	T_INT  shift 41
	T_CONSTCHAR  shift 42
	T_STRING  shift 43
	T_FALSE  shift 44
	T_TRUE  shift 45
	T_PLUS  shift 46
	T_MINUS  shift 47
	T_FPLUS  shift 48
	T_FMINUS  shift 49
	T_BANK  shift 50
	T_LPAR  shift 51
	.  error

	letdef  goto 52
	expr  goto 76
	atom  goto 54


state 35
	expr : T_NEW . types  (73)

	T_ARRAY  shift 55
	T_ID  shift 56
	T_CHAR  shift 57
	T_BOOL  shift 58
	T_UNIT  shift 59
	T_FLOATST  shift 60
	T_INTST  shift 61
	T_LPAR  shift 62
	.  error

	types  goto 77


state 36
	expr : T_NOT . expr  (67)

	T_BEGIN  shift 29
	T_DELETE  shift 30
	T_DIM  shift 31
	T_FOR  shift 32
	T_IF  shift 33
	T_LET  shift 6
	T_MATCH  shift 34
	T_NEW  shift 35
	T_NOT  shift 36
	T_WHILE  shift 37
	T_ID  shift 38
	T_CID  shift 39
	T_FLOAT  shift 40
	T_INT  shift 41
	T_CONSTCHAR  shift 42
	T_STRING  shift 43
	T_FALSE  shift 44
	T_TRUE  shift 45
	T_PLUS  shift 46
	T_MINUS  shift 47
	T_FPLUS  shift 48
	T_FMINUS  shift 49
	T_BANK  shift 50
	T_LPAR  shift 51
	.  error

	letdef  goto 52
	expr  goto 78
	atom  goto 54


state 37
	expr : T_WHILE . expr T_DO expr T_DONE  (70)

	T_BEGIN  shift 29
	T_DELETE  shift 30
	T_DIM  shift 31
	T_FOR  shift 32
	T_IF  shift 33
	T_LET  shift 6
	T_MATCH  shift 34
	T_NEW  shift 35
	T_NOT  shift 36
	T_WHILE  shift 37
	T_ID  shift 38
	T_CID  shift 39
	T_FLOAT  shift 40
	T_INT  shift 41
	T_CONSTCHAR  shift 42
	T_STRING  shift 43
	T_FALSE  shift 44
	T_TRUE  shift 45
	T_PLUS  shift 46
	T_MINUS  shift 47
	T_FPLUS  shift 48
	T_FMINUS  shift 49
	T_BANK  shift 50
	T_LPAR  shift 51
	.  error

	letdef  goto 52
	expr  goto 79
	atom  goto 54


state 38
	expr : T_ID . atomstar  (79)
	atom : T_ID .  (89)
	atom : T_ID . T_LBRACK expr comaexpr T_RBRACK  (91)

	T_ID  shift 80
	T_CID  shift 81
	T_FLOAT  shift 40
	T_INT  shift 41
	T_CONSTCHAR  shift 42
	T_STRING  shift 43
	T_FALSE  shift 44
	T_TRUE  shift 45
	T_BANK  shift 50
	T_LPAR  shift 51
	T_LBRACK  shift 82
	T_EOF  reduce 89
	T_ANDDEF  reduce 89
	T_DO  reduce 89
	T_DONE  reduce 89
	T_DOWNTO  reduce 89
	T_ELSE  reduce 89
	T_END  reduce 89
	T_IN  reduce 89
	T_LET  reduce 89
	T_THEN  reduce 89
	T_TO  reduce 89
	T_TYPE  reduce 89
	T_WITH  reduce 89
	T_SEQ  reduce 89
	T_BAR  reduce 89
	T_PLUS  reduce 89
	T_MINUS  reduce 89
	T_TIMES  reduce 89
	T_DIV  reduce 89
	T_MOD  reduce 89
	T_FPLUS  reduce 89
	T_FMINUS  reduce 89
	T_FTIMES  reduce 89
	T_FDIV  reduce 89
	T_POWER  reduce 89
	T_SMCOLON  reduce 89
	T_AND  reduce 89
	T_OR  reduce 89
	T_NSEQ  reduce 89
	T_L  reduce 89
	T_G  reduce 89
	T_LE  reduce 89
	T_GE  reduce 89
	T_EQ  reduce 89
	T_NEQ  reduce 89
	T_ASSIGN  reduce 89
	T_RPAR  reduce 89
	T_RBRACK  reduce 89
	T_COMA  reduce 89

	atom  goto 83
	atomstar  goto 84


state 39
	expr : T_CID . atomstar  (78)
	atom : T_CID .  (88)

	T_ID  shift 80
	T_CID  shift 81
	T_FLOAT  shift 40
	T_INT  shift 41
	T_CONSTCHAR  shift 42
	T_STRING  shift 43
	T_FALSE  shift 44
	T_TRUE  shift 45
	T_BANK  shift 50
	T_LPAR  shift 51
	T_EOF  reduce 88
	T_ANDDEF  reduce 88
	T_DO  reduce 88
	T_DONE  reduce 88
	T_DOWNTO  reduce 88
	T_ELSE  reduce 88
	T_END  reduce 88
	T_IN  reduce 88
	T_LET  reduce 88
	T_THEN  reduce 88
	T_TO  reduce 88
	T_TYPE  reduce 88
	T_WITH  reduce 88
	T_SEQ  reduce 88
	T_BAR  reduce 88
	T_PLUS  reduce 88
	T_MINUS  reduce 88
	T_TIMES  reduce 88
	T_DIV  reduce 88
	T_MOD  reduce 88
	T_FPLUS  reduce 88
	T_FMINUS  reduce 88
	T_FTIMES  reduce 88
	T_FDIV  reduce 88
	T_POWER  reduce 88
	T_SMCOLON  reduce 88
	T_AND  reduce 88
	T_OR  reduce 88
	T_NSEQ  reduce 88
	T_L  reduce 88
	T_G  reduce 88
	T_LE  reduce 88
	T_GE  reduce 88
	T_EQ  reduce 88
	T_NEQ  reduce 88
	T_ASSIGN  reduce 88
	T_RPAR  reduce 88
	T_RBRACK  reduce 88
	T_COMA  reduce 88

	atom  goto 83
	atomstar  goto 85


state 40
	atom : T_FLOAT .  (82)

	.  reduce 82


state 41
	atom : T_INT .  (81)

	.  reduce 81


state 42
	atom : T_CONSTCHAR .  (83)

	.  reduce 83


state 43
	atom : T_STRING .  (84)

	.  reduce 84


state 44
	atom : T_FALSE .  (86)

	.  reduce 86


state 45
	atom : T_TRUE .  (85)

	.  reduce 85


state 46
	expr : T_PLUS . expr  (63)
